# auraroute

./: Cargo.toml  README.md  TODO.md  auraroute.toml
src/: app.rs  config.rs  hardware.rs  lib.rs  main.rs  models.rs  proxy.rs  scorer.rs
tests/: config_routes.rs  health_models.rs  proxy_sse.rs
