[package]
name = "auraroute"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fast local LLM router and resource governor for OpenAI-compatible chat traffic."

[workspace]
members = ["."]

[dependencies]
anyhow = "1.0"
axum = "0.7"
bytes = "1.7"
futures-util = "0.3"
once_cell = "1.19"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokenizers = "0.20"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
